auth doc
